# smoke-detector-arduino

./: CMakeLists.txt  prj.conf
boards/shields/smokedetector_arduino/: Kconfig.shield  smokedetector_arduino.defconfig  smokedetector_arduino.overlay
boards/shields/smokedetector_arduino/boards/smokedetector_arduino/: nrf52dk_nrf52832.defconfig  nrf52dk_nrf52832.overlay
src/: main.c  mspbsl_client.c
